OI-48: Changed the way svg icons is taken in the rrssb module. Created JS logic to hide/show share button mobile block. Fixed fonts size, and bug with mobile screen. Created mobile share block, and CSS styles for it.

--- a/themes/openideal_theme/scss/_typography.scss
+++ b/themes/openideal_theme/scss/_typography.scss
@@ -12,7 +12,7 @@ $font-family-serif: Georgia, "Times New Roman", Times, serif !default;
 $font-family-base: $font-family-assistant;
 
 // Size
-$font-size-base: 1rem;
+$font-size-base: 1.125rem;
 $font-size-lg: $font-size-base * 1.25;
 $font-size-sm: $font-size-base * .8889;
 $font-size-xs: $font-size-base * .8333333333333334;
@@ -27,7 +27,7 @@ $font-weight-base: $font-weight-normal;
 $line-height-base: 1.333;
 
 // Heading
-$h1-font-size: $font-size-base * 2;
+$h1-font-size: 2.25rem;
 $h2-font-size: 1.377rem;
 $h3-font-size: 1.33rem;
 $h4-font-size: 1.33rem;
