--- a/themes/openideal_theme/scss/style.scss
+++ b/themes/openideal_theme/scss/style.scss
@@ -9,7 +9,8 @@ Description: Bootstrap 4 with Sass
 /* GENERAL STYLES
 -------------------------------------------------*/
 html {
-  font-size: 18px;
+  font-size: 16px;
+  overflow: hidden;
 }
 
 body {
